[project]
name = "peter-explains"
version = "0.1.0"
description = "Linux command explanations from Peter Griffin"
readme = "README.md"
authors = [
    { name = "Atick Faisal", email = "atickfaisal@gmail.com" }
]
maintainers = [
    { name = "Atick Faisal", email = "atickfaisal@gmail.com" }
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.10"
keywords = ["linux", "command", "peter", "griffin", "family", "guy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "colorama>=0.4.6",
    "diskcache>=5.6.3",
    "google-generativeai>=0.8.4",
    "json-repair>=0.39.1",
    "keyring>=25.6.0",
]

[project.scripts]
peter = "peter-explains.main:peter"

[project.urls]
Homepage = "https://atick.dev/peter-explains/"
Documentation = "https://atick.dev/peter-explains/"
Repository = "https://github.com/atick-faisal/peter-explains"
"Bug Tracker" = "https://github.com/atick-faisal/peter-explains/issues"
Changelog = "https://github.com/atick-faisal/peter-explains/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.11", "3.10"]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
